--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "2"
 services:
     influxdb:
-        build: ~/workspace/docker/influxdb/
+        build: influxdb/
         ports:
             - "8086:8086"
             - "8083:8083"
             - "8088:8088"
     grafana:
-        build: ~/workspace/docker/grafana/
+        build: grafana/
         ports:
             - "3000:3000"
         links: 
