--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "2"
 services:
     influxdb:
-        build: influxdb/
+        build: alpine-influxdb/
         ports:
             - "8086:8086"
             - "8083:8083"
             - "8088:8088"
+        
     grafana:
         build: grafana/
         ports:
             - "3000:3000"
-        links: 
+        links:
             - "influxdb:influxdb"
         depends_on:
             - influxdb
-
