Improved docker scripts.

--- a/alpine-influxdb/telegraf.conf
+++ b/alpine-influxdb/telegraf.conf
@@ -68,7 +68,7 @@
 
 
 # Read metrics about disk IO by device
-[[inputs.diskio]]
+#[[inputs.diskio]]
   # devices = ["sda", "sdb"]
   # skip_serial_number = true
 
@@ -85,7 +85,7 @@
 [[inputs.swap]]
 
 # Read metrics about system load & uptime
-#[[inputs.system]]
+[[inputs.system]]
   # no configuration
 
 # # Read InfluxDB-formatted JSON metrics from one or more HTTP endpoints
