--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,7 +1,10 @@
 FROM debian:jessie
 
+ENV BUILD_PACKAGES libfontconfig wget git 
+
+
 RUN apt-get -y update
-RUN apt-get -y install libfontconfig curl wget
+RUN apt-get -y install $BUILD_PACKAGES curl
 
 WORKDIR /tmp
 RUN wget -O /tmp/grafana.tgz https://grafanarel.s3.amazonaws.com/builds/grafana-3.0.4-1464167696.linux-x64.tar.gz \
@@ -14,6 +17,12 @@ RUN wget -O /tmp/grafana.tgz https://grafanarel.s3.amazonaws.com/builds/grafana-
 && mv -f /tmp/telegraf/* /opt/telegraf/. \
 && rm -rf /tmp/grafana* \
 && rm -rf /tmp/telegraf
+
+RUN mkdir -p /opt/grafana/data/plugins \ 
+&& cd /opt/grafana/data/plugins/ \
+&& git clone https://github.com/grafana/piechart-panel.git
+
+RUN apt-get remove --purge -y wget libfontconfig git && apt-get clean &&rm -rf /var/lib/apt/lists/*
 
 COPY telegraf.conf /opt/telegraf/etc/telegraf/
 COPY grafana_dash.json /opt/grafana/
