--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,13 @@ dependencies:
   override:
     - docker info
     - docker build -t jasonwitting/grafanav1 grafana/.
+    - docker info
+    - docker build -t jasonwitting/alpine-influxdbv1 alpine-influxdb/.
 
 test:
   override:
+    - docker run -d -p 8083:8083 -p 8086:8086 jasonwitting/alpine-influxdbv1; sleep 10
+    - curl --retry 10 --rety-delay 5 -v http://localhost:8083 
     - docker run -d -p 3000:3000 jasonwitting/grafanav1; sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost:3000
 
@@ -18,3 +22,4 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push jasonwitting/grafanav1
+      - docker push jasonwitting/alpine-influxdbv1
