--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
 test:
   override:
     - docker run -d -p 8083:8083 -p 8086:8086 jasonwitting/alpine-influxdbv1; sleep 10
-    - curl --retry 10 --rety-delay 5 -v http://localhost:8083 
+    - curl --retry 10 --retry-delay 5 -v http://localhost:8083 
     - docker run -d -p 3000:3000 jasonwitting/grafanav1; sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost:3000
 
